pre scroll animation build

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />    
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Alumni+Sans+Collegiate+One:ital@0;1&family=Bebas+Neue&family=Diplomata+SC&family=Emblema+One&family=Keania+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <meta
